doc: quick build themes

--- a/themes/livly-1/index.html
+++ b/themes/livly-1/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>livly-1 theme - Mastodon on blog</title>
+    <link href="../../iframe.base.css" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
+    <!-- <link href="./like.style.css" rel="stylesheet"> -->
 </head>
 <body>
     <div id="my-mastodon-widget"></div>
