--- a/index.html
+++ b/index.html
@@ -5,29 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mastodon on blog</title>
-    <link href="./default.style.css" rel="stylesheet">
     <link href="./iframe.base.css" rel="stylesheet">
-    <style>
-        /*
-        #my-mastodon-widget {
-            height: 100px;
-            width: 300px;
-        }
-        */
-    </style>
 </head>
 <body>
     <div id="my-mastodon-widget"></div>
-    <script src="./mastodon-on-blog.js"></script>
-    <script>
-        MastodonOnBlog({
-            instance: 'o3o.ca',
-            userId: 541,
-            loadingText: '加载中(´·ω·｀)',
-            loadFailText: '加载失败(╯°Д°）╯︵ /(.□ . \\)',
-            rootDOM: 'my-mastodon-widget',
-            staticStatusesDataPath: './test/statuses.json'
-        })
-    </script>
+    <script
+      data-instance="o3o.ca"
+      data-user-id="541"
+      data-loading-text="加载中(´·ω·｀)"
+      data-root-dom-id="my-mastodon-widget"
+      data-static-statuses-data-path="./test/statuses.json"
+      data-style-path="./default.style.css"
+      src="./mastodon-on-blog.js"
+    ></script>
 </body>
 </html>
