fix: 1. reblog toots 2. replay toots update: 1. default style

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,6 @@
     </style>
 </head>
 <body>
-  <iframe src="../themes/livly-1/index.html" height=360 width=180></iframe>
+  <iframe src="../index.html" height=360 width=280></iframe>
 </body>
 </html>
